# strongly-typed

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: python-package.yml
strongly_typed/: __init__.py  __test__.py
